# cargo-debrief

./: .gitignore  CLAUDE.md  Cargo.toml
ai-docs/: _index.md  list-active.sh  mental-model.md  smoke-test.md  usability-test-ripgrep.md
ai-docs/mental-model/: chunker.md  config.md  daemon.md  deps.md  embedder.md  git.md  ipc.md  overview.md  search.md  service.md  store.md
ai-docs/plans/2026-04/: 04-0923.dep-chunking-phase1.md  04-0943.dep-chunking-phase2.md  04-1008.dep-chunking-phase3.md  04-1300.embedding-pipeline.md  04-1340.phase-1d-integration.md  05-1314.burn-nomic-bert.md  05-1400.candle-migration.md  11-1033.ort-cpu-phase2.md  11-1500.multi-language-sources.md
ai-docs/ref/: search-quality-eval.md
ai-docs/spec/: cargo-debrief.md
ai-docs/tickets/done/: 260403-epic-mvp-implementation.md  260403-research-rag-architecture.md  260404-feat-cli-scaffold-config-service.md  260404-feat-core-indexing-pipeline.md  260404-feat-daemon-mode.md  260404-fix-gpu-acceleration.md  260404-fix-usability-test-findings.md  260404-refactor-service-trait-multi-workspace.md  260409-refactor-burn-backend-unification.md  260411-refactor-ort-cpu-revival.md  260412-fix-external-source-file-discovery.md  260412-fix-incremental-indexing.md
ai-docs/tickets/idea/: 260404-feat-daemon-mode.md  260404-feat-dependency-chunking.md  260404-feat-llm-chunk-summarization.md  260404-feat-rust-chunking-population.md  260404-fix-gpu-acceleration.md  260404-idea-usability-test-repos.md  260404-research-marathon-skill-improvements.md  260405-epic-gpu-embedding-acceleration.md  260405-feat-cpp-chunker.md  260405-feat-cpp-deps-discovery.md  260405-feat-on-demand-dep-indexing.md  260409-epic-multi-language-sources.md  260412-bug-search-score-saturation.md  260412-chore-smoke-test-rust-source.md  260412-feat-incremental-progress-output.md
src/: chunk.rs  config.rs  daemon.rs  deps.rs  embedder.rs  git.rs  lib.rs  main.rs  nomic_bert_burn.rs  search.rs  service.rs  store.rs
src/chunker/: cpp.rs  mod.rs  rust.rs
src/ipc/: mod.rs  protocol.rs  unix.rs  windows.rs
tests/: integration.rs  integration_multi_language_sources.rs  integration_network.rs
(+17 files in other folders)
