[package]
name = "cargo-debrief"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
bincode = "1"
clap = { version = "4", features = ["derive"] }
dirs = "6"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
toml = "1"

[dev-dependencies]
tempfile = "3"
