[package]
name = "cargo-debrief"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
hnsw_rs = "0.3"
bincode = "1"
clap = { version = "4", features = ["derive"] }
dirs = "6"
indicatif = "0.17"
ort = { version = "2.0.0-rc.12", features = ["download-binaries"] }
reqwest = { version = "0.12", features = ["stream"] }
serde = { version = "1", features = ["derive"] }
tokenizers = "0.19"
tokio = { version = "1", features = ["full"] }
toml = "1"
tree-sitter = "0.26"
tree-sitter-rust = "0.24"

[dev-dependencies]
tempfile = "3"
