[package]
name = "cargo-debrief"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
cargo_metadata = "0.18"
hnsw_rs = "0.3"
bincode = "1"
clap = { version = "4", features = ["derive"] }
dirs = "6"
libc = "0.2"
serde_json = "1"
futures-util = "0.3"
indicatif = "0.17"
burn = { version = "=0.21.0-pre.3", optional = true, default-features = false, features = ["ndarray", "store"] }
burn-store = { version = "=0.21.0-pre.3", optional = true, default-features = false, features = ["std", "safetensors", "pytorch"] }
ort = { version = "=2.0.0-rc.12", optional = true, features = ["download-binaries"] }
reqwest = { version = "0.12", features = ["stream"] }
serde = { version = "1", features = ["derive"] }
tokenizers = "0.19"
tokio = { version = "1", features = ["full"] }
toml = "1"
tree-sitter = "0.26"
tree-sitter-rust = "0.24"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_Storage_FileSystem", "Win32_System_IO", "Win32_System_Threading"] }

[dev-dependencies]
tempfile = "3"

[features]
default = ["wgpu"]
wgpu = ["dep:burn", "dep:burn-store", "burn/wgpu"]
ort-cpu = ["dep:ort"]
